header and footer additions, header needs to be fixed to not overlap with page content and footer need to stick to be bottom on short pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,28 +3,61 @@
 
 
 /* Generic HTML Tags */
+    body{       
+       
+    }
     a {
         text-decoration: none;
     }
 /* Header */
-    .bg-primary {
-        background-image: linear-gradient(to bottom right, blue, rgb(242, 242, 115), purple);
+    .header {
+        width:100%;
+        height:200px;
+        background: white;
+        color: #000;        
+        // position:fixed;
+        // top:0;
+        // left:0;
+        transition: height 500ms, background 500ms
     }
-    /* Navbar */
-        .logo {           
-            color:rgb(255,255,255);
-            opacity:0.8;
-            font-family: cormorant
+    .header.tiny {
+        height:60px;
+        background: rgb(255, 255, 255);
+        color: #fff;
+    }
+    #logo-container {
+        padding-top: 10px;
+        transition: height 500ms, background 500ms
+    }
+    .logo {   
+        width: 300px;
+        margin: auto;
+        
+        text-align: center; 
+        font-size: 2.5rem;       
+        color:rgb(0,0,0);
+        font-family: cormorant;
+        border: 5px solid black;        
         }
+
+    /* Navbar */
         .navbar-nav {
             float: right;
         }
 
  /* Body */
-    .main-body {
-        padding-top: 5.5em;
-        
+    .main-body {        
+        flex: 1 0 auto;
     }
+    // .footer {
+    //     position: absolute;
+    //     right: 0;
+    //     bottom: 0;
+    //     left: 0;
+    //     padding: 1rem;
+    //     background-color: #efefef;
+    //     text-align: center;
+    // }
 
  /* Index page */
     .card {
@@ -96,7 +129,7 @@
     .blog-body {     
     }
 
-/* Right Hand side */
+/* Right Hand side column */
     .ads {                             
         background: #fff;
         border: 1px solid #ddd;
